===============================================================================
Revision GroupVPN Alpha
-------------------------------------------------------------------------------
- IPOP now supports a VPN Router mode
- For Security, IPOP now supports a Group model called GroupVPN
- Merged CondorIpopNode and DhtIpopNode
- ARPs are only returned if there is an end point for the requested IP
- Removed Linux dependency on c-lib
- Added static address support
===============================================================================
Revision 8
-------------------------------------------------------------------------------
- Fixes for TAP
- Fixes for DHCP
===============================================================================
Revision 7
-------------------------------------------------------------------------------
- Cleanup of TAP stuff
- Fixes to Hostname for DhtIpop
===============================================================================
Revision 5
-------------------------------------------------------------------------------
- Tcp in Brunet fixed
- Security in Brunet
===============================================================================
Revision 2
-------------------------------------------------------------------------------
- Updated to Brunet 1.01
- Moved NetworkPackets into its own directory
- IPHandler Multicast has been tweaked for better reliability on a multitude
of systems
===============================================================================
Revision 1
-------------------------------------------------------------------------------
- Changed the default Windows MTU as it doesn't seem to be set by dhcp
- Added more documentation for the Dht and inserting DhtDHCPServer
configurations into the dht
===============================================================================
Revision 0
-------------------------------------------------------------------------------
Initial release.